added retry mechanism

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,11 @@
-spring.application.name=banking-service
-
-spring.datasource.url=jdbc:mysql://localhost:3306/banking
+spring.datasource.url=jdbc:mysql://mysql:3306/banking
 spring.datasource.username=devuser
 spring.datasource.password=devpass
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
+spring.liquibase.enabled=true
 
