--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -2,9 +2,12 @@ spring.datasource.url=jdbc:h2:mem:banking;DB_CLOSE_DELAY=-1;MODE=MySQL
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=none
 
-# Use the same Liquibase changelog if desired
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
 spring.liquibase.enabled=true
+
+# Optional: prevent H2 console auto-loading during test
+spring.h2.console.enabled=false
